--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\info1\\AppData\\Roaming\\NetBeans\\12.4\\tomcat90.properties
+deploy.ant.properties.file=C:\\Users\\pamga\\AppData\\Roaming\\NetBeans\\12.0\\tomcat90.properties
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 9.0
 j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 9.0
-user.properties.file=C:\\Users\\info1\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
+user.properties.file=C:\\Users\\pamga\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
