Auto stash before checking out "origin/DEV"

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,14 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.aopalliance-1.0.jar=D:\\Cegep\\(5) Session Automne 2021\\S\u00e9curit\u00e9-web-JSP\\Outils\\aopalliance-1.0.jar
+file.reference.jackson-annotations-2.13.0-rc1.jar=D:\\Cegep\\(5) Session Automne 2021\\S\u00e9curit\u00e9-web-JSP\\Outils\\jackson-annotations-2.13.0-rc1.jar
+file.reference.jackson-core-2.13.0-rc1.jar=D:\\Cegep\\(5) Session Automne 2021\\S\u00e9curit\u00e9-web-JSP\\Outils\\jackson-core-2.13.0-rc1.jar
+file.reference.jackson-databind-2.13.0-rc1.jar=D:\\Cegep\\(5) Session Automne 2021\\S\u00e9curit\u00e9-web-JSP\\Outils\\jackson-databind-2.13.0-rc1.jar
+file.reference.mssql-jdbc-9.4.0.jre11.jar=D:\\Cegep\\(5) Session Automne 2021\\S\u00e9curit\u00e9-web-JSP\\Outils\\sqljdbc_9.4.0.0_fra\\sqljdbc_9.4\\fra\\mssql-jdbc-9.4.0.jre11.jar
+file.reference.spring-security-config-4.0.0.RELEASE.jar=D:\\Cegep\\(5) Session Automne 2021\\S\u00e9curit\u00e9-web-JSP\\Outils\\spring-security-config-4.0.0.RELEASE.jar
+file.reference.spring-security-core-4.0.0.RELEASE.jar=D:\\Cegep\\(5) Session Automne 2021\\S\u00e9curit\u00e9-web-JSP\\Outils\\spring-security-core-4.0.0.RELEASE.jar
+file.reference.spring-security-web-4.0.0.RELEASE.jar=D:\\Cegep\\(5) Session Automne 2021\\S\u00e9curit\u00e9-web-JSP\\Outils\\spring-security-web-4.0.0.RELEASE.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -38,7 +46,16 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${libs.spring-framework400.classpath}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${libs.javaee-web-api-8.0.classpath}:\
+    ${file.reference.aopalliance-1.0.jar}:\
+    ${file.reference.jackson-annotations-2.13.0-rc1.jar}:\
+    ${file.reference.jackson-core-2.13.0-rc1.jar}:\
+    ${file.reference.jackson-databind-2.13.0-rc1.jar}:\
+    ${file.reference.spring-security-config-4.0.0.RELEASE.jar}:\
+    ${file.reference.spring-security-core-4.0.0.RELEASE.jar}:\
+    ${file.reference.spring-security-web-4.0.0.RELEASE.jar}:\
+    ${file.reference.mssql-jdbc-9.4.0.jre11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
